<resources>

    <string name="app_name">Popular Movies</string>

    <string name="tmdb_api_key">[YOUR_API_KEY]</string>

    <string name="error_message">Some error happened!, please check your internet connectivity and try again</string>

    <string name="sort_by">Sort by</string>


    <string-array name="arr_sort_options">
        <item>Most Popular Movies</item>
        <item>Top Rated Movies</item>
    </string-array>

    <string name="title_activity_details">Movie Details</string>
    <string name="settings">Settings</string>

    <string name="pref_sort_by_title">Sort By</string>
    <string name="pref_sort_by_label_popular">Most Popular</string>
    <string name="pref_sort_by_label_top_rated">Top Rated</string>
    <string name="pref_sort_by_label_favorites">Favorites</string>
    <string name="pref_sort_by_value_popular">popular</string>
    <string name="pref_sort_by_value_top_rated">top_rated</string>
    <string name="pref_sort_by_value_favorites">favorites</string>

    <string name="pref_sort_by_key">sort_by</string>
    <string name="fav">FAV</string>
    <string name="videos">Videos</string>
    <string name="reviews">Reviews</string>
    <string name="movie_unfavorited">Removed from favorites</string>
    <string name="error_unfavoriting">Error removing this movie from favorites!</string>
    <string name="movie_favorited">Added to favorites</string>
    <string name="error_favoriting">Error adding this movie to favorites!</string>
    <string name="author">Author:</string>
    <string name="action_share">Share</string>
    <string name="no_favorites">No Favorites</string>
    <string name="no_reviews">No Reviews</string>
    <string name="no_videos">No Videos</string>

</resources>
